apps/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: nginx:latest
          ports:
            - containerPort: 443
          volumeMounts:
            # Mount TLS secret
            - name: tls
              mountPath: /etc/nginx/tls
              readOnly: true
            # Mount nginx config
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: hello-server-tls
        - name: nginx-config
          configMap:
            name: nginx-config
